# eeg-cybersickness

./: README.md  pyproject.toml
.github/workflows/: build.yml  code-style.yml  pytest.yml
eeg_cybersickness/: __init__.py  epochs.py  io.py
eeg_cybersickness/config/: config.py  triggers.ini
eeg_cybersickness/config/tests/: test_config.py
eeg_cybersickness/config/tests/data/: test_triggers.ini  test_triggers_invalid.ini
eeg_cybersickness/sequences/: session3-Pitch.csv  session3-Roll.csv  session4-Pitch-Yaw.csv
eeg_cybersickness/triggers/: __init__.py  _create_sti.py  _find_event_onset.py  config.py  triggers.ini
eeg_cybersickness/triggers/sequences/: session1-Pitch-Yaw-Roll.csv  session2-None.csv  session3-Yaw.csv  session4-Pitch-Roll.csv  session4-Roll-Yaw.csv
eeg_cybersickness/triggers/tests/: test_config.py
eeg_cybersickness/triggers/tests/data/: test_triggers.ini
eeg_cybersickness/utils/: _checks.py  _docs.py  config.py  logs.py  path.py
eeg_cybersickness/utils/tests/: test_checks.py
scripts/: bandpower.py  parameterize-spectrum.py  preprocessing.ipynb  preprocessing.py
