[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'eeg_cybersickness'
version = '0.1.0'
description = 'Study the cybersickness through rotation of the pitch, yaw and roll axis in a VR simulation.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.9'
authors = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
maintainers = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'python',
    'eeg',
    'neuroscience',
    'cybersickness',
    'virtual reality',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
]
dependencies = [
    'bioread',
    'mne',
    'mne-icalabel',
    'numpy>=1.21',
    'packaging',
    'pandas',
    'psutil',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
style = [
    'bibclean',
    'black',
    'codespell',
    'isort',
    'pydocstyle[toml]',
    'ruff',
]
test = [
    'pytest',
    'pytest-cov',
    'pytest-timeout',
]
all = [
    'eeg_cybersickness[build]',
    'eeg_cybersickness[style]',
    'eeg_cybersickness[test]',
]
full = [
    'eeg_cybersickness[all]',
]

[project.urls]
homepage = 'https://github.com/mscheltienne/eeg-cybersickness'
documentation = 'https://github.com/mscheltienne/eeg-cybersickness'
source = 'https://github.com/mscheltienne/eeg-cybersickness'
tracker = 'https://github.com/mscheltienne/eeg-cybersickness/issues'

[project.scripts]
eeg_cybersickness-sys_info = 'eeg_cybersickness.commands.sys_info:run'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['eeg_cybersickness*']
exclude = ['eeg_cybersickness*tests']

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | .github
    | .ruff_cache
    | setup.py
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 79
py_version = 38
extend_skip_glob = [
    'setup.py',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^eeg_cybersickness.*'
add_ignore = 'D100,D104,D107'

[tool.ruff]
line-length = 79
extend-exclude = [
    "setup.py",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/eeg_cybersickness/_version.py',
    '**/eeg_cybersickness/commands/*',
    '**/eeg_cybersickness/utils/_fixes.py',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2
